# Pulse-Ops-Embedded-Diagnostics

./: .gitignore  README.md  requirements.txt
.github/workflows/: ci.yml
automation/: device_client.py  logger.py  test_runner.py
configs/: config.json
dashboard/: app.py
dashboard/templates/: index.html
diagnostics/: log_parser.py  system_monitor.py
embedded_app/: CMakeLists.txt  device_emulator.py  main.cpp  simulator.cpp  simulator.hpp  socket_server.cpp  socket_server.hpp
logs/: automation_run.json
ml_engine/: anomaly_detector.py  trainer.py
ml_engine/models/: anomaly_detector.pkl  tfidf_vectorizer.pkl
reports/: history_db.py  report_generator.py  test_history.db
scripts/: build.bat  build.sh  run_all.py
tests/: conftest.py  test_boot.py  test_memory.py  test_network.py  test_sensor.py  test_stress.py
